# apl

./: .gitignore  Dockerfile  Earthfile  README.md  docker-compose.yml  package-lock.json  package.json  turbo.json
.github/workflows/: test.yml
apps/docs/: next.config.mjs  package.json
apps/docs/app/: _meta.js  layout.tsx  page.mdx
apps/frontend/: .eslintrc.json  next.config.js  next.config.mjs  package.json
apps/frontend/app/: actions.ts  layout.tsx  page.tsx
apps/frontend/components/: ConnectWallet.tsx  DefaultLayout.tsx  Header.tsx  LaserEyesProviderWrapper.tsx  TokenAccountControls.tsx  TokenBalance.tsx  TokenBalanceDisplay.tsx  action-button.tsx  archway-wallet-page.tsx  balance-display.tsx  confirmation-animation.tsx  connect-wallet-drawer.tsx  layout.tsx  receive-drawer.tsx  send-form.tsx  token-item.tsx  token-select-drawer.tsx  transaction-sign-drawer.tsx
apps/frontend/lib/: arch.ts  config.ts  constants.ts  token-instruction-parser.ts  utils.ts  wait-for-confirmation.ts
apps/web/: package.json
keypairs/: apl-sats.json  scat.json  wallet.json
programs/apl-amm/: Cargo.toml  package.json
programs/apl-amm/src/: error.rs  lib.rs
programs/apl-amm/src/instruction/: mod.rs
programs/apl-amm/src/processor/: mod.rs
programs/apl-amm/src/state/: pool.rs
programs/apl-sats/: Cargo.toml  package.json
programs/apl-sats/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
programs/arch-program/: Cargo.toml
programs/associated-token-account/: Cargo.toml  package.json
programs/token/: Cargo.toml  package.json
(+28 files in other folders)
