[package]
name = "arch-network-app"
version = "0.1.0"
edition = "2021"

[dependencies]
arch_program = { path = "../arch-program" }
borsh = { version = "1.5.1", features = ["derive"] }
bitcoin = { version = "0.31.0", features = ["serde"] }
thiserror = "2.0"
num-traits = "0.2"
arrayref = "0.3.9"
num-derive = "0.4"


[lib]
crate-type = ["cdylib"]
