[package]
name = "apl-sats"
version = "0.1.0"
edition = "2021"

[dependencies]
arch_program = { path = "../arch-program" }
borsh = { version = "1.5.1", features = ["derive"] }
bitcoin = { version = "0.31.0", features = ["serde"] }
bitcoin-io = { version = "=0.1.2" }

arrayref = "0.3.9"
bytemuck = "1.20.0"
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.7.3"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
proptest = "1.0.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = [] 